[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://assets/scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/scenes/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/scenes/HUD.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( -19.9113, -11.1758, 19.9113, 11.1758, 3727.16, -338.472, 0, 0, 0, 0, 3732.57, 963.217, 0, 0, 0, 0, 1027.36, -288.999, 0, 0, 0, 0, 3562.73, -274.098, 0, 0, 0, 0, -419.529, 739.172, 0, 0, 0, 0, -266.875, -248.021, 0, 0, 0, 0, 980.9, 854.655, 0, 0, 0, 0, 3005.22, 869.556, 0, 0, 0, 0, 3396.81, 239.988, 0, 0, 0, 0, 270.73, -236.845, 0, 0, 0, 0, -260.238, -244.296 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
Mob = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.01

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 508.307, 169.635 )

[node name="MobPath" type="Path2D" parent="."]
position = Vector2( 147.633, 195.91 )
scale = Vector2( 0.204965, 0.365176 )
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 3727.16, -338.472 )
rotation = 1.19544

[node name="HUD" parent="." instance=ExtResource( 4 )]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
